@@ -27,6 +27,10 @@ FBINTF Change Log  version            (1.1-2) Mon, 09 Apr 2018 11:30:46 +0100
 
 10. Testsuite Test10 updated to include thread synchronisation for event reporting.
 
+11. URL Connection Strings: inet4 and inet6 now recognised.
+
+12. IBUtils: Parse and Make Connect String now recognise URL style loopback syntax.
+
 
 FBINTF Change Log  version (1.1-1) Tue, 27 Feb 2018 16:51:16 +0000
 
